--- a/components/net_http_server/CMakeLists.txt
+++ b/components/net_http_server/CMakeLists.txt
@@ -9,7 +9,7 @@ endif()
 idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS . "./include" 
-    REQUIRES  app_config
+    REQUIRES  app_config esp_http_server
     PRIV_REQUIRES  cli debug userio http_server_content
-                   esp_http_server mbedtls
+                    mbedtls
  )
