--- a/components/net_http_server/CMakeLists.txt
+++ b/components/net_http_server/CMakeLists.txt
@@ -8,4 +8,4 @@ idf_component_register(
                     mbedtls
  )
  
-component_compile_options(-${component_compile_opts})
+component_compile_options(${component_compile_opts})
