--- a/components/net/CMakeLists.txt
+++ b/components/net/CMakeLists.txt
@@ -1,6 +1,6 @@
-set(srcs  ipnet.c 
+set(srcs  ipnet.cc
 esp32/ethernet.c  esp32/ethernet/esp_eth_phy_lan8720.c
-esp32/ipnet.c  esp32/ntp.c  esp32/tcp_server.c  esp32/tcp_cli_server_task.cc esp32/wifi_ap.c  esp32/wifistation.c esp32/http_client.c) 
+esp32/ipnet.c  esp32/ntp.c  esp32/tcp_server.c  esp32/tcp_cli_server_task.cc esp32/wifi_ap.c  esp32/wifistation.cc esp32/http_client.c) 
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DMCU_ESP32")
 
