--- a/components/net/CMakeLists.txt
+++ b/components/net/CMakeLists.txt
@@ -6,7 +6,7 @@ idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS "./include" 
     #REQUIRES "utils_misc"
-    PRIV_REQUIRES app_config utils_misc net_http_server txtio cli utils_debug
+    PRIV_REQUIRES app_config utils_misc net_http_server txtio cli utils_debug fernotron_trx
                   esp_netif esp_wifi esp_eth esp_http_client #PRIV_ESP_IDF
  )
 
