--- a/components/net/CMakeLists.txt
+++ b/components/net/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(srcs  ipnet.cc
-esp32/ethernet.cc  esp32/ethernet/esp_eth_phy_lan8720.c
+esp32/ethernet.cc
 esp32/ipnet.c  esp32/ntp.c 
 # esp32/tcp_server.cc
   esp32/tcp_cli_server_task.cc esp32/wifi_ap.cc
