--- a/components/net_http_server/CMakeLists.txt
+++ b/components/net_http_server/CMakeLists.txt
@@ -3,7 +3,7 @@ set(srcs http_server.cc  esp32/http_server.cc)
 idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS "./include" 
-    REQUIRES  app_config esp_http_server
+    REQUIRES   esp_http_server
     PRIV_REQUIRES  cli utils_debug uout
                     esp_wifi mbedtls #PRIV_ESP_IDF
  )
