Add limited http client for host tests

--- a/components/net/CMakeLists.txt
+++ b/components/net/CMakeLists.txt
@@ -5,6 +5,10 @@ esp32/ipnet.c  esp32/ntp.cc
   esp32/tcp_cli_server_task.cc esp32/wifi_ap.cc
   esp32/wifistation.cc esp32/http_client.cc) 
 
+if(TEST_HOST)
+set(srcs ${srcs} host/http_client.cc)
+endif()
+
 idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS "./include" 
