--- a/components/net_http_server/Kconfig
+++ b/components/net_http_server/Kconfig
@@ -1,5 +1,9 @@
 menu "zwiebert: HTTP Server"
 
+    config NET_HTTP_SERVER_HAVE_COMPONENT
+        bool
+        default y
+
     config APP_HTTP_ENABLE
         int  "Enable HTTP server by default"
         range 0 1
