Remove dependency txtio

--- a/components/net/CMakeLists.txt
+++ b/components/net/CMakeLists.txt
@@ -1,6 +1,5 @@
 set(srcs  ipnet.cc
 esp32/ipnet.c  esp32/ntp.cc
-# esp32/tcp_server.cc
   esp32/tcp_cli_server_task.cc esp32/wifi_ap.cc
   esp32/http_client.cc) 
 
@@ -19,7 +18,7 @@ idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS "./include" 
     REQUIRES uout
-    PRIV_REQUIRES main_loop  utils_misc net_http_server txtio cli utils_debug uout
+    PRIV_REQUIRES main_loop  utils_misc net_http_server cli utils_debug uout
                   esp_netif esp_wifi esp_eth esp_http_client #PRIV_ESP_IDF
  )
 
