--- a/components/net/CMakeLists.txt
+++ b/components/net/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(srcs  ipnet.cc
+set(srcs  src/ipnet.cc
 esp32/ipnet.c  esp32/ntp.cc
   esp32/tcp_cli_server_task.cc esp32/wifi_ap.cc
   esp32/http_client.cc) 
